Fix update job condition in update.yml

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -57,7 +57,7 @@ jobs:
       image: ghcr.io/flathub-infra/flatpak-github-actions:freedesktop-25.08
       options: --privileged
     needs: check
-    if: needs.outputs.update == 'true'
+    if: needs.check.outputs.update == 'true'
     permissions:
       contents: write
     steps:
