--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -125,7 +125,7 @@ jobs:
       - name: "Sign GitHub Pages Repository Summary"
         env:
           GPG_KEY_ID: ${{ secrets.GPG_KEY_ID }}
-        run: ostree summary -u --gpg-sign="$GPG_KEY_ID" gh-pages
+        run: ostree summary -u --gpg-sign="$GPG_KEY_ID" --repo=gh-pages
 
       - name: "Configure Git For Deployment"
         run: |
