Fix .gitattributes location in update.yml

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -134,7 +134,7 @@ jobs:
 
       - name: "Publish GitHub Pages Repositry"
         run: |
-          cp .gitattributes gh-pages/
+          cp main/.gitattributes gh-pages/
           git -C gh-pages lfs install
           git -C gh-pages lfs track "**/objects/**"
           git -C gh-pages add .
