Fix gpg public key export

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -136,7 +136,7 @@ jobs:
             echo "[Flatpak Repo]";
             echo "Title=Google Chrome (Unofficial)";
             echo "Url=${REPO_URL}";
-            echo "GPGKey=";
+            echo "GPGKey=$(gpg --export $GPG_KEY_ID | base64 | tr -d '\n')";
             gpg --export --armor "$GPG_KEY_ID"
           } > "gh-pages/chrome.flatpakrepo"
 
